# Black-Anvil

./: .gitignore  CONFIG.md  Cargo.toml  README.md  STARLARK.md  USAGE.md  copilot-instructions.md
.github/: copilot-instructions.md
.github/workflows/: rust-build-and-test.yml
examples/: README.md  build-only.toml  ci-config.toml  dev-config.toml  location-only.toml  offline-install.toml  portable-install.toml  prod-config.toml  system-install.toml  user-install.toml
scripts/: self_installer.sh
src/: config.rs  lib.rs  main.rs
tauri-app/: index.html  main.js  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
test_install2/: black-anvil
